@@ -2,6 +2,11 @@
 Changes with Apache 2.3.0
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) core; scoreboard: ap_get_scoreboard_worker(sbh) now takes the sbh member
+     from the connection rec, ap_get_scoreboard_worker(proc, thread) will now
+     provide the unusual legacy lookup.  Also cleans up PR 31127 range checks.
+     [William Rowe, Christian von Roques <roques mti.ag>]
+
   *) mod_proxy_http: Check but don't escape/unescape forward-proxied URLs
      PR 42592 [Nick Kew]
 
